# euler-angles-quaternions-library-conversion

./: CMakeLists.txt  README.md  euler.cpp
include/euler/: io.cpp  rotations.cpp
src/: euler.cpp
